# iris-richwasm

./: .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  Wasm.opam  _CoqProject  autosubst-ocaml.nix  dune  dune-project  flake.nix  iris-richwasm.opam  iris-richwasm.opam.template  iris-rwasm.opam  iris-wasm.opam  justfile  notes.md  package-lock.json  package.json  package.sh  tsconfig.json
src/common/: RichWasm.ml  annotated_syntax.ml  compare.md  dune  elaborate.ml  extract_compat.ml  infer.ml  main.ml  monads.ml  sexp_parse.ml  syntax.ml  util.ml  wasm_ugly_printer.ml
src/lin-lang/: cc.ml  codegen.ml  compile.ml  dune  grammar.bnf  index.ml  ir.ml  main.ml  parse.ml  syntax.ml  typecheck.ml  util.ml
src/runtime/: dune  host.js  host_common.ts  host_double.ts  host_single.ts  host_triple.ts  interface.d.ts  module.wat  richwasm.wat  tableset.ts
tests/: dune  main.ml
tests/e2e/: dune  lin_lang_single.ml  main.ml  mini_ml_single.ml  richwasm_single.ml
tests/e2e/support/: testing.ml
tests/examples/: case.wat  dune  lin_lang.ml  mini_ml.ml
tests/examples/standalone/: safe_div.ll  safe_div.rw
tests/lin-lang/: cc.ml  codegen.ml  dune  index.ml  parse.ml  pp.ml  typecheck.ml
tests/lin_lang/: ann.ml  cc.ml  codegen.ml  dune  examples.ml  help.ml  index.ml  parse.ml  pp.ml  typecheck.ml
tests/mini-ml/: dune  example_test.ml  main.ml  parse.ml
tests/richwasm/: dune  lin_lang_to_ann.ml  lin_lang_to_wasm.ml  mini_ml_to_ann.ml  mini_ml_to_wasm.ml  rwasm_to_wasm.ml
tests/richwasm/meta/: run_rw.ml  simple_host.js  wasm2wat.ml  wat2wasm.ml
tests/runtime/: dune  harness.ts  runner.ml
tests/support/: dune  host_common.ts  host_double.ts  host_single.ts  host_triple.ts  run_rw.ml  simple_host.js  simple_host.ts  tableset.ts  test_runner.ml  test_utils.ml  utils.ml  walker.test.ts  walker.ts  wasm2wat.ml  wat2wasm.ml
theories/: EnsembleUtil.v  annotated_subst.v  annotated_term.v  annotated_typing.v  autowp.v  binary_format_parser.v  binary_format_printer.v  bytes.v  check_toks.v  common.v  compile.v  datatypes.v  datatypes_properties.v  debruijn.v  dune  exn.v  functions.v  interpreter.v  kinding_subst.v  layout.v  list_util.v  locations.v  memory.v  memory_list.v  obs.v  obs_properties.v  operations.v  opsem_erase.v  opsem_instr.v  prelude.v  properties.v  rwasm_datatypes.v  state.v  subst.v  syntax.v  term.v  type_checker_reflects_typing.v  type_preservation.v  type_progress.v  typed_term.v  (+2 more)
theories/compiler/: accum.v  codegen.v  compile.v  convert.v  dune  error.v  functions.v  instrs.v  instruction.v  ir.v  layout.v  memory.v  module.v  modules.v  monads.v  numbers.v  numerics.v  old_compile.v  old_compile2.v  prelude.v  types.v  util.v  utils.v
theories/examples/: dune  dup.v  one_plus_two.v  swap.v
theories/extract/: dune  extract.v  extract_rw_syntax.v
theories/iris/: autowp.v  dune  gc.v  gclogic.v  logrel.v  logrel_properties.v  memory.v  num_reprs.v  numerics.v  runtime.v  util.v  wp_codegen.v
theories/iris/alloc/: alloc.txt  block.v  client.v  dune  inst.v  memrsc.v  reprs.v  specs.v
theories/iris/alloc/functions/: dune  free.v  malloc.v  malloc_impl.v  util.v
theories/iris/allocator/: allocator_client.v  allocator_instantiation.v  blocks.v  dune  memrsc.v  misc_relocate.v  reprs.v  spec.v
theories/iris/allocator/function/: allocator_common.v  allocator_specs.v  dune  free.v  malloc.v  malloc_impl.v  misc_relocate.v
theories/iris/helpers/: dune  iris_prim_step_split.v  iris_properties.v  iris_reduction_core.v  iris_wasm_determ.v  lfilled_reduce.v
theories/iris/helpers/lfill_prelude/: dune  lfill_extension.v  lfill_prelude.v
theories/iris/helpers/prelude/: dune  iris_lfilled_properties.v  iris_reduce_det_prelude.v  iris_reduce_properties.v  iris_split_reduce.v  iris_wasm_lang_properties.v
theories/iris/helpers/reduce_det/: dune  reduce_det_binop.v  reduce_det_block.v  reduce_det_cvtop.v  reduce_det_invoke_native.v  reduce_det_label.v  reduce_det_local.v  reduce_det_loop.v  reduce_det_relop.v  reduce_det_return.v  reduce_det_select.v  reduce_det_testop.v  reduce_det_unop.v
theories/iris/host/: dune  iris_host.v
theories/iris/instantiation/: dune  instantiation_properties.v  iris_instantiation.v
theories/iris/language/: cwp.v  dune  iris_atomicity.v  iris_wp.v  iris_wp_def.v  lenient_wp.v  logpred.v  lwp_pure.v  lwp_resources.v  lwp_structural.v  lwp_trap.v  trap_wp.v  wp_sem_ctx.v
theories/iris/language/cwp/: base.v  const.v  control.v  def.v  dune  memory.v  numeric.v  parametric.v  structural.v  util.v  variable.v
theories/iris/language/iris/: dune  iris.v  iris_locations.v
theories/iris/logrel/: case_ptr.v  copy.v  dune  env_props.v  function.v  fundamental.v  fundamental_cwp.v  fundamental_kinding.v  fundamental_module.v  instr.v  iris_rwasm_logrel.v  load.v  load_common.v  load_copy.v  load_move.v  logrel_properties.v  map_gc_ptr.v  module.v  path.v  path_defs.v  relations.v  relations_cwp.v  relations_module.v  roots.v  rt_token.v  store_common.v  substitution.v  type_eq.v  util.v  virt_to_phys_strong.v
theories/iris/logrel/compat/: app.v  block.v  br.v  call.v  call_indirect.v  case.v  (+38 more)
theories/iris/rules/: dune  iris_example_helper.v  iris_rules.v  iris_rules_bind.v  iris_rules_calls.v  iris_rules_control.v  iris_rules_pure.v  iris_rules_resources.v  iris_rules_structural.v  iris_rules_trap.v  lwp_pure.v  lwp_rules.v  lwp_structural.v  lwp_trap.v  proofmode.v
theories/named_props/: custom_syntax.v  dune
theories/opsem/: dune  erase.v  instr.v  obs_properties.v  properties.v
theories/syntax/: core.v  dune  module.v  modules.v  prelude.v  rw.sig  rw_prelude.v.in
theories/typechecker/: dune  examples_typechecker.v  typechecker.v
theories/util/: debruijn.v  dlist.v  dune  ensemble.v  functions.v  list.v  map.v  state.v  stdpp_extlib.v  tactics.v
theories/wasm/: binary_format_printer.v  bytes.v  common.v  datatypes.v  datatypes_properties.v  dune  instantiation.v  memory_list.v  numerics.v  operations.v  opsem.v  pickability.v  properties.v  stdpp_aux.v  type_preservation.v  type_progress.v  typing.v
(+168 files in other folders)
