(test
 (name main)
 (modules main :standard)
 (libraries
  core
  core_unix
  iris-richwasm.common
  iris-richwasm.runtime
  iris-richwasm.test-e2e)
 (deps %{dep:support/tableset.ts})
 (action
  (setenv
   RW_RUNTIME_WASM_PATH
   %{lib:iris-richwasm.runtime:richwasm.wasm}
   (setenv
    HOST_SINGLE_PATH
    %{dep:support/host_single.ts}
    (setenv
     HOST_TRIPLE_PATH
     %{dep:support/host_triple.ts}
     (run %{test}))))))
