(test
 (name main)
 (modules main :standard)
 (libraries
  core
  core_unix
  iris-richwasm.common
  iris-richwasm.runtime
  iris-richwasm.test-e2e)
 (deps
  %{dep:../src/runtime/tableset.ts}
  %{dep:../src/runtime/walker.ts}
  %{dep:../src/runtime/host_common.ts})
 (action
  (setenv
   RW_RUNTIME_WASM_PATH
   %{lib:iris-richwasm.runtime:richwasm.wasm}
   (setenv
    HOST_SINGLE_PATH
    %{dep:../src/runtime/host_single.ts}
    (setenv
     HOST_DOUBLE_PATH
     %{dep:../src/runtime/host_double.ts}
     (setenv
      HOST_TRIPLE_PATH
      %{dep:../src/runtime/host_triple.ts}
      (run %{test})))))))
