(library
 (name richwasm_common)
 (public_name iris-richwasm.common)
 (modules main :standard)
 (libraries base iris-richwasm.extract sexplib)
 (preprocess
  (staged_pps
   ppx_import
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.iter
   ppx_deriving.map
   ppx_deriving.fold
   ppx_sexp_conv)))
