(library
 (name richwasm_lin_lang)
 (public_name iris-richwasm.lin-lang)
 (modules main :standard)
 (libraries iris-richwasm.common sexplib base)
 (preprocess
  (staged_pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.iter
   ppx_deriving.map
   ppx_deriving.fold
   ppx_let
   ppx_import
   ppx_sexp_conv)))
