(library
 (name richwasm_runtime)
 (public_name iris-richwasm.runtime)
 (modules :standard)
 (libraries base))

(rule
 (targets richwasm.wasm)
 (deps richwasm.wat)
 (action
  (run wat2wasm --enable-multi-memory %{dep:richwasm.wat} -o %{targets})))

; (env
;  (_
;   (env-vars
;    (RW_RUNTIME_WASM_PATH "%{lib-private:runtime:richwasm.wasm}"))))
