(library
 (name richwasm_runtime)
 (public_name iris-richwasm.runtime)
 (modules :standard)
 (libraries base))

(rule
 (targets richwasm.wasm)
 (deps richwasm.wat)
 (action
  (run wat2wasm --enable-multi-memory %{dep:richwasm.wat} -o %{targets})))

(install
 (section lib)
 (package iris-richwasm)
 (files
  (richwasm.wasm as runtime/richwasm.wasm)
  (host_common.ts as runtime/host_common.ts)
  (host_single.ts as runtime/host_single.ts)
  (host_double.ts as runtime/host_double.ts)
  (host_triple.ts as runtime/host_triple.ts)
  (tableset.ts as runtime/tableset.ts)
  (walker.ts as runtime/walker.ts)))
