(library
 (name test_e2e)
 (public_name iris-richwasm.test-e2e)
 (modules main :standard)
 (libraries
  core
  core_unix
  core_unix.linux_ext
  alcotest
  ocolor
  iris-richwasm.test-examples
  iris-richwasm.test-support
  iris-richwasm.lin-lang
  iris-richwasm.mini-ml)
 (preprocess
  (staged_pps ppx_sexp_conv ppx_variants_conv)))

(include_subdirs qualified)
