(library
 (name test_support)
 (public_name iris-richwasm.test-support)
 (modules :standard)
 (libraries base core core_unix iris-richwasm.common)
 (preprocess
  (staged_pps ppx_sexp_conv ppx_variants_conv)))

(install
 (section lib)
 (package iris-richwasm)
 (files
  (host_single.ts as tests/host_single.ts)
  (host_triple.ts as tests/host_triple.ts)
  (tableset.ts as tests/tableset.ts)))
