(library
 (name test_support)
 (public_name iris-richwasm.test-support)
 (modules :standard)
 (libraries base core core_unix iris-richwasm.common iris-richwasm.support)
 (preprocess
  (staged_pps ppx_sexp_conv ppx_variants_conv)))

(rule
 (alias runtest)
 (deps walker.ts walker.test.ts)
 (action
  (run node --test)))

(install
 (section lib)
 (package iris-richwasm)
 (files
  (host_common.ts as tests/host_common.ts)
  (host_single.ts as tests/host_single.ts)
  (host_double.ts as tests/host_double.ts)
  (host_triple.ts as tests/host_triple.ts)
  (tableset.ts as tests/tableset.ts)
  (walker.ts as tests/walker.ts)))
