(library
 (name test_support)
 (public_name iris-richwasm.test-support)
 (modules :standard)
 (libraries base core core_unix iris-richwasm.common iris-richwasm.support)
 (preprocess
  (staged_pps ppx_sexp_conv ppx_variants_conv)))

(rule
 (alias runtest)
 (deps walker.test.ts ../../src/runtime/walker.ts)
 (action
  (run node --test)))
