(coq.extraction
 (prelude extract)
 (extracted_modules RwSyntax)
 (theories Stdlib RichWasm.syntax RichWasm.compiler
  iris
  Wasm
  elpi
  compcert
  Flocq
  parseque
  HB
  mathcomp
  mathcomp.ssreflect
  elpi
  elpi_elpi
  stdpp
  RichWasm
  ITree
  Paco
  RecordUpdate
  Ltac2
  ExtLib.Data
  ExtLib.Structures
  ExtLib.Core
  ExtLib.Tactics))



(library
 (name richwasm_extract)
 (public_name iris-richwasm.extract)
 (modules :standard)
 (libraries zarith))

(env
  (release
    (flags (:standard -w -20)))
  (dev
    (flags (:standard -w -20))))
