(rocq.extraction
 (prelude extract)
 (extracted_files
  accum.ml accum.mli
  Applicative.ml Applicative.mli
  Archi.ml Archi.mli
  array.ml array.mli
  Ascii.ml Ascii.mli
  base.ml base.mli
  Basics.ml Basics.mli
  Binary.ml Binary.mli
  BinarySingleNaN.ml BinarySingleNaN.mli
  binary_format_printer.ml binary_format_printer.mli
  BinInt.ml BinInt.mli
  BinNat.ml BinNat.mli
  BinNatDef.ml BinNatDef.mli
  BinNums.ml BinNums.mli
  BinPos.ml BinPos.mli
  BinPosDef.ml BinPosDef.mli
  Bits.ml Bits.mli
  Bool.ml Bool.mli
  Byte.ml Byte.mli
  Byte0.ml Byte0.mli
  bytes.ml bytes.mli
  codegen.ml codegen.mli
  common.ml common.mli
  Coqlib.ml Coqlib.mli
  core.ml core.mli
  Datatypes.ml Datatypes.mli
  datatypes0.ml datatypes0.mli
  datatypes_properties.ml datatypes_properties.mli
  decidable.ml decidable.mli
  EitherMonad.ml EitherMonad.mli
  EqDec.ml EqDec.mli
  eqtype.ml eqtype.mli
  Floats.ml Floats.mli
  IEEE754_extra.ml IEEE754_extra.mli
  instruction.ml instruction.mli
  IntDef.ml IntDef.mli
  Integers.ml Integers.mli
  layout.ml layout.mli
  leb128.ml leb128.mli
  List.ml List.mli
  List0.ml List0.mli
  list_basics.ml list_basics.mli
  list_misc.ml list_misc.mli
  list_monad.ml list_monad.mli
  list_numbers.ml list_numbers.mli
  list_relations.ml list_relations.mli
  ListDef.ml ListDef.mli
  Memdata.ml Memdata.mli
  memory.ml memory.mli
  memory_list.ml memory_list.mli
  module.ml module.mli
  module0.ml module0.mli
  Monad.ml Monad.mli
  MonadExc.ml MonadExc.mli
  MonadTrans.ml MonadTrans.mli
  MonadWriter.ml MonadWriter.mli
  Monoid.ml Monoid.mli
  Nat.ml Nat.mli
  NatDef.ml NatDef.mli
  numerics.ml numerics.mli
  OptionMonad.ml OptionMonad.mli
  option.ml option.mli
  PeanoNat.ml PeanoNat.mli
  PosDef.ml PosDef.mli
  PPair.ml PPair.mli
  prelude.ml prelude.mli
  RecordSet.ml RecordSet.mli
  Round.ml Round.mli
  rw.ml rw.mli
  seq.ml seq.mli
  SpecFloat.ml SpecFloat.mli
  Specif.ml Specif.mli
  ssrbool.ml ssrbool.mli
  ssreflect.ml ssreflect.mli
  ssrfun.ml ssrfun.mli
  ssrnat.ml ssrnat.mli
  String.ml String.mli
  syntax.ml syntax.mli
  Traversable.ml Traversable.mli
  unscoped.ml unscoped.mli
  util.ml util.mli
  WriterMonad.ml WriterMonad.mli
  ZArith_dec.ml ZArith_dec.mli
  Zaux.ml Zaux.mli
  Zbits.ml Zbits.mli
  Zpower.ml Zpower.mli
  pretty.ml pretty.mli
  numbers.ml numbers.mli
  typechecker.ml typechecker.mli
  typing.ml typing.mli)
 (theories
  Stdlib
  RichWasm.syntax
  RichWasm.compiler
  RichWasm.typechecker
  iris
  elpi
  compcert
  Flocq
  parseque
  HB
  mathcomp
  mathcomp.boot
  elpi
  elpi_elpi
  stdpp
  RichWasm
  ITree
  Paco
  RecordUpdate
  Ltac2
  ExtLib.Data
  ExtLib.Structures
  ExtLib.Core
  ExtLib.Tactics)
 (flags -w -extraction-reserved-identifier))

(library
 (name richwasm_extract)
 (public_name iris-richwasm.extract)
 (modules :standard)
 (libraries zarith))

(env
 (release
  (flags
   (:standard -w -20-33-39-67)))
 (dev
  (flags
   (:standard -w -20-33-39-67))))
