(coq.theory
  (name RichWasm.iris)
  (package iris-richwasm)
  (flags
    -w -ambiguous-paths
    -w -redundant-canonical-projection)
  (theories
    ExtLib.Core
    ExtLib.Data
    ExtLib.Structures
    iris
    ITree
    Ltac2
    Paco
    RichWasm
    RichWasm.compiler
    RichWasm.iris.logrel
    stdpp
    Wasm.iris.helpers
    Wasm.iris.host
    Wasm.iris.language
    Wasm.iris.rules))
