(coq.theory
  (name RichWasm.iris)
  (package iris-richwasm)
  (flags
    :standard
    -w -ambiguous-paths
    -w -redundant-canonical-projection)
  (theories
    Wasm.iris.helpers
    Wasm.iris.host
    Wasm.iris.language
    Wasm.iris.rules
    RichWasm
    RichWasm.compiler
    RichWasm.iris.logrel
    RichWasm.iris.language
    RichWasm.iris.rules
    RichWasm.iris.alloc.functions))
