(coq.theory
 (name RichWasm.syntax)
 (package iris-richwasm)
 (flags
   :standard
   -w -argument-scope-delimiter
   -w -automatic-prop-lowering)
 (theories Stdlib))

(rule
  (target rw.v)
  (deps rw.sig rw_prelude.v.in)
  (action
    (run autosubst -o %{target} -f -no-static -p rw_prelude.v.in rw.sig)))
