(coq.theory
  (name RichWasm.iris.host)
  (package iris-richwasm)
  (flags
    :standard
    -w -ambiguous-paths
    -w -notation-overridden
    -w -abstract-large-number
    -w -extraction-reserved-identifier)
  (theories
    Wasm
    Wasm.iris.language
    Wasm.iris.helpers
    Wasm.iris.rules
    Wasm.iris.instantiation
    RichWasm.iris.language))
