(coq.theory
  (name RichWasm.iris.instantiation)
  (package iris-richwasm)
  (flags
    -w -ambiguous-paths
    -w -notation-overridden
    -w -abstract-large-number
    -w -extraction-reserved-identifier)
  (theories
    RichWasm.iris.language
    RichWasm.iris.helpers
    RichWasm.iris.rules
    RichWasm))
