(coq.theory
  (name RichWasm.iris.alloc.functions)
  (package iris-richwasm)
  (flags -w -ambiguous-paths)
  (theories
    iris
    stdpp
    Ltac2
    compcert
    Flocq
    Wasm.iris.examples.stack
    Wasm.iris.logrel
    Wasm.iris.rules
    mathcomp
    HB
    elpi
    elpi_elpi
    parseque
    RichWasm.iris.alloc))
