(coq.theory
  (name RichWasm.iris.helpers.prelude)
  (package iris-richwasm)
  (flags
    :standard
    -w -ambiguous-paths
    -w -notation-overridden
    -w -abstract-large-number
    -w -extraction-reserved-identifier)
  (theories
    RichWasm
    RichWasm.iris.language.iris
    RichWasm.iris.helpers.lfill_prelude))
