(coq.theory
  (name RichWasm.iris.language.iris)
  (package iris-richwasm)
  (flags
    :standard
    -w -ambiguous-paths
    -w -notation-overridden
    -w -abstract-large-number
    -w -extraction-reserved-identifier)
  (theories
    RichWasm
    RichWasm.iris.helpers.lfill_prelude
    ITree
    Paco))
